--- a/src/NetCHASMDaemon/CMakeLists.txt
+++ b/src/NetCHASMDaemon/CMakeLists.txt
@@ -10,5 +10,4 @@ set_property(TARGET NetCHASMDaemon PROPERTY CXX_STANDARD 14)
 set_target_properties(NetCHASMDaemon PROPERTIES COMPILE_FLAGS "${CPP_FLAGS}")
 set_target_properties(NetCHASMDaemon PROPERTIES LINK_FLAGS "${CPP_FLAGS}")
 target_link_libraries (NetCHASMDaemon netchasm_core)
-install(TARGETS NetCHASMDaemon RUNTIME DESTINATION bin64)
-
+install(TARGETS NetCHASMDaemon RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
