--- a/src/hm_command/CMakeLists.txt
+++ b/src/hm_command/CMakeLists.txt
@@ -8,4 +8,4 @@ set_property(TARGET hm_command PROPERTY CXX_STANDARD 14)
 set_target_properties(hm_command PROPERTIES COMPILE_FLAGS "${CPP_FLAGS}")
 set_target_properties(hm_command PROPERTIES LINK_FLAGS "${CPP_FLAGS}")
 target_link_libraries (hm_command netchasm)
-install(TARGETS hm_command RUNTIME DESTINATION bin64)
+install(TARGETS hm_command RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
