--- a/src/hm_reload/CMakeLists.txt
+++ b/src/hm_reload/CMakeLists.txt
@@ -8,4 +8,4 @@ set_property(TARGET hm_reload PROPERTY CXX_STANDARD 14)
 set_target_properties(hm_reload PROPERTIES COMPILE_FLAGS "${CPP_FLAGS}")
 set_target_properties(hm_reload PROPERTIES LINK_FLAGS "${CPP_FLAGS}")
 target_link_libraries (hm_reload netchasm)
-install(TARGETS hm_reload RUNTIME DESTINATION bin64)
+install(TARGETS hm_reload RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
