--- a/src/hm_staticdns/CMakeLists.txt
+++ b/src/hm_staticdns/CMakeLists.txt
@@ -8,4 +8,4 @@ set_property(TARGET hm_staticdns PROPERTY CXX_STANDARD 14)
 set_target_properties(hm_staticdns PROPERTIES COMPILE_FLAGS "${CPP_FLAGS}")
 set_target_properties(hm_staticdns PROPERTIES LINK_FLAGS "${CPP_FLAGS}")
 target_link_libraries (hm_staticdns netchasm)
-install(TARGETS hm_staticdns RUNTIME DESTINATION bin64)
+install(TARGETS hm_staticdns RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
